# AtlasMind

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  deploy.yml
atlasmind/: bootstrap.py  config.py  main.py  pipeline.py  version.py
atlasmind/agents/: amendment.py  kb_ingestion.py  lint.py  router.py
atlasmind/agents/prompts/: kb_ingestion_system.md  lint_system.md  router_system.md
atlasmind/agents/tools/: interaction.py  kb_entities.py  kb_lint.py  kb_log.py  kb_meta.py  kb_pages.py  url_metadata.py
atlasmind/edge/: handlers.py  session.py  telegram_app.py  url_registry.py
atlasmind/ingestion/: link_fetcher.py  normalize.py  transcriber.py
atlasmind/shared/: types.py
atlasmind/vault/: frontmatter.py  fs.py  git_sync.py  paths.py
base_docs/: AtlasMind PRD.docx
dev/: errors.md  feature_log.md  local_run.py
dev_specs/: 00_overview.md  01_architecture.md  02_repo_layout.md  03_telegram_layer.md  04_ingestion_layer.md  05_agent_layer.md  06_kb_contract.md  07_git_versioning.md  08_deferred_v0+1.md  09_open_questions.md  10_development_plan.md
kb_definitions/: kb_definitions.ci.md  kb_definitions.example.md  kb_definitions.md
scripts/: provision_droplet.sh
tests/: conftest.py
tests/contract/: test_agents.py  test_amendment.py  test_data_shapes.py  test_kb_filesystem.py  test_kb_ingestion_tools.py  test_lint_tools.py  test_pipeline.py  test_router_tools.py
tests/unit/: test_frontmatter.py  test_git_sync.py  test_kb_entities.py  test_kb_ingestion.py  test_kb_log.py  test_kb_meta.py  test_kb_pages.py  test_lint.py  test_normalize.py  test_paths.py  test_pipeline.py  test_router.py  test_session.py  test_url_registry.py  test_vault_fs.py  test_version.py
