[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasmind"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot==21.*",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "openai>=1.0",
    "python-frontmatter>=1.1",
    "readability-lxml>=0.8",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["atlasmind*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "contract: cross-layer contract tests (gate merge)",
    "unit: within-layer unit tests",
]

[tool.ruff]
line-length = 100
