[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasmind"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot==21.*",
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "openai>=1.0,<2.0",
    "python-frontmatter>=1.1,<2.0",
    "readability-lxml>=0.8,<1.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "anthropic>=0.40,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["atlasmind*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "contract: cross-layer contract tests (gate merge)",
    "unit: within-layer unit tests",
]

[tool.ruff]
line-length = 100
